// (Copyright) [2016 - 2016] Confluent, Inc.
syntax = "proto3";
package command_cluster_metadata;

option java_package = "io.confluent.command.cluster_metadata";

message KafkaClusterMetadata {
    repeated string zookeeperConnect = 1;
    repeated string bootstrapServers = 2;
    string clusterId = 3;
}

message KafkaConnectClusterMetadata {
    repeated string restUrls = 1;
    string kafkaClusterId = 2;
}

message ClusterMetadata {
    string displayName = 1;
    oneof details {
        KafkaClusterMetadata kafka = 2;
        KafkaConnectClusterMetadata connect = 3;
    }
}
